<resources>
    <string name="app_name">Tourneynizer</string>
    <string name="login">Login</string>
    <string name="createAccount">Create Account</string>
    <string name="emailPrompt">Email:</string>
    <string name="passwordPrompt">Password:</string>
    <string name="confirmPasswordPrompt">Confirm Password:</string>
    <string name="namePrompt">Name:</string>
    <string name="registerAccountPrompt">Don\'t have an account? Click here to register</string>
    <string name="loginPrompt">Already have an account? Click here to login</string>
    <string name="tournaments">Tournaments</string>
    <string name="requestTournament">Request to join tournament</string>
    <string name="tournamentsParticipated">Tournaments</string>
    <string name="gamesWon">Games Won</string>
    <string name="gamesLost">Games Lost</string>
    <string name="search">Enter a user\'s email</string>
    <string name="createTournament">Create Tournament</string>
    <string name="tournamentName">Tournament Name:</string>
    <string name="description">Description:</string>
    <string name="chooseLocation">Choose Location</string>
    <string name="selectTournamentType">Select the type of Tournament</string>
    <string name="teamToEnterTournament">To enter a tournament, you must be part of a team</string>
    <string name="viewPendingTeams">View Open Teams</string>
    <string name="createOwnTeam">Create New Team</string>
    <string name="createTeam">Create Team</string>
    <string name="teamName">Team Name:</string>
    <string name="createTournamentTeam">Create team for the tournament</string>
    <string name="findTeams">Join a Team</string>
    <string name="or">OR</string>
    <string name="teamSize">Team Size</string>
    <string name="maxTeams">Max Teams</string>
    <string name="chooseDate">Choose date</string>
    <string name="chooseTime">Choose time</string>
    <string name="datePrompt">Date</string>
    <string name="timePrompt">Time</string>
    <string name="locationPrompt">Location</string>
    <string name="numCourts">Num Courts</string>
    <string name="logOut">Log Out</string>
    <string name="myTeams">My Teams</string>
    <string name="myTournaments">My Tournaments</string>
    <string name="myRequests">My Requests</string>
    <string name="partOfTournament">Part of Tournament</string>
    <string name="teamMembers">Members</string>
    <string name="requestToJoin">Request to join</string>
    <string name="teamRequests">Team Requests</string>
    <string name="viewRequests">View Requests</string>
    <string name="requestPlayers">Find Players</string>
    <string name="requestPlayer">Request Player</string>
    <string name="startTournament">Start Tournament</string>
    <string name="matches">Matches</string>
    <string name="viewYourTeam">View Your Team</string>
    <string name="viewTeams">View Teams</string>
    <string name="teams">Teams</string>
    <string name="viewMatches">View Matches</string>
    <string name="match">Match</string>
    <string name="startMatch">Start Match</string>
    <string name="endMatch">End Match</string>
    <string name="refreshScores">Refresh Scores</string>
</resources>
