<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_height="match_parent"
	android:layout_width="match_parent"
	android:orientation="vertical">

	<TextView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/login"
		android:textAlignment="center"
		android:layout_marginTop="@dimen/marginSize"
		android:textSize="@dimen/largeTextSize"/>

	<TextView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginStart="@dimen/marginSize"
        android:labelFor="@id/email"
		android:text="@string/emailPrompt"
		android:textSize="@dimen/mediumTextSize" />

	<EditText
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:inputType="textEmailAddress"
		android:layout_marginStart="@dimen/marginSize"
		android:textSize="@dimen/mediumTextSize"
		android:id="@+id/email" />

	<TextView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginStart="@dimen/marginSize"
        android:labelFor="@id/password"
		android:text="@string/passwordPrompt"
		android:textSize="@dimen/mediumTextSize" />

	<EditText
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:inputType="textPassword"
		android:layout_marginStart="@dimen/marginSize"
		android:textSize="@dimen/mediumTextSize"
		android:id="@+id/password" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_gravity="center_horizontal"
        android:id="@+id/loginButton" />

	<TextView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/registerAccountPrompt"
		android:textAlignment="center"
        android:clickable="true"
        android:focusable="true"
		android:layout_marginTop="@dimen/marginSize"
        android:textColor="@color/clickableTextColor"
        android:id="@+id/registerAccountLink" />

</LinearLayout>
