<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.tourneynizer.tourneynizer.fragments.CreateTeamFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_marginTop="@dimen/marginSize"
            android:textSize="@dimen/largeTextSize"
            android:text="@string/createTeam"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginSize"
            android:textSize="@dimen/mediumTextSize"
            android:labelFor="@id/teamName"
            android:text="@string/teamName"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginSize"
            android:textSize="@dimen/mediumTextSize"
            android:inputType="text"
            android:lines="1"
            android:id="@+id/teamName"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginSize"
            android:id="@+id/createButton"
            android:layout_gravity="center_horizontal"
            android:text="@string/createTournamentTeam"/>

    </LinearLayout>

</ScrollView>
