<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.tourneynizer.tourneynizer.fragments.UserProfileFragment"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/paddingSize">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:src="@mipmap/ic_launcher"
            android:id="@+id/profilePic"
            android:layout_marginRight="@dimen/marginSize"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/profilePic"
            android:textSize="@dimen/largeTextSize"
            android:textColor="@color/titleTextColor"
            android:layout_alignParentTop="true"
            android:id="@+id/name"
            android:layout_alignParentEnd="true"
            android:textAlignment="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/mediumTextSize"
            android:layout_alignParentEnd="true"
            android:textAlignment="center"
            android:id="@+id/email"
            android:layout_toEndOf="@id/profilePic"
            android:layout_below="@id/name" />

    </RelativeLayout>

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/mediumTextSize"
                    android:layout_margin="@dimen/marginSize"
                    android:textColor="@color/titleTextColor"
                    android:text="@string/tournamentsParticipated"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/marginSize"
                    android:id="@+id/tournamentsParticipated"
                    android:layout_gravity="center_horizontal"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/mediumTextSize"
                    android:textColor="@color/titleTextColor"
                    android:layout_margin="@dimen/marginSize"
                    android:text="@string/gamesWon"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/gamesWon"
                    android:layout_margin="@dimen/marginSize"
                    android:textAlignment="center"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/mediumTextSize"
                    android:layout_margin="@dimen/marginSize"
                    android:textColor="@color/titleTextColor"
                    android:text="@string/gamesLost"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/gamesLost"
                    android:layout_margin="@dimen/marginSize"
                    android:layout_gravity="center_horizontal"/>

            </LinearLayout>

        </LinearLayout>

    </HorizontalScrollView>

</LinearLayout>
